# barinova

./: .gitignore  README.md  build_barinova_unix.sh  config-grevys.txt  config-pedestrians.txt  pedestrian-config.txt
ObjectDetection/DenseGreedyDetection/: GreedyDetection.cpp
ObjectDetection/Forests/: BoxTest.h  HoughForest.cpp  IHoughForest.h  IVote.h  RandomTree.h  Vote.cpp  Vote.h
ObjectDetection/ImageWrapper/: ImageUtils.h  MultiImage.h  MultiImageTools.cpp
ObjectDetection/ObjectDetection/: CMakeLists.txt
